--- a/style.css
+++ b/style.css
@@ -3,3 +3,5 @@
 @import url('assets/css/header.css');
 @import url('assets/css/conteudo.css');
 @import url('assets/css/footer.css');
+@import url('assets/css/single.css');
+@import url('assets/css/reserva.css');
